RESOLVED FIXED172844
Atomics.load and Atomics.store need to be fully fenced
https://bugs.webkit.org/show_bug.cgi?id=172844
Summary Atomics.load and Atomics.store need to be fully fenced
Filip Pizlo
Reported 2017-06-01 17:39:22 PDT
Patch forthcoming.
Attachments
this might be right (4.56 KB, patch)
2017-06-01 17:39 PDT, Filip Pizlo
no flags
this might be right (7.34 KB, patch)
2017-06-01 17:40 PDT, Filip Pizlo
no flags
the patch (9.67 KB, patch)
2017-06-02 09:40 PDT, Filip Pizlo
no flags
the patch (9.97 KB, patch)
2017-06-02 09:41 PDT, Filip Pizlo
keith_miller: review+
Filip Pizlo
Comment 1 2017-06-01 17:39:48 PDT
Created attachment 311787 [details] this might be right
Filip Pizlo
Comment 2 2017-06-01 17:40:19 PDT
Created attachment 311788 [details] this might be right forgot WTF
Build Bot
Comment 3 2017-06-01 21:13:49 PDT
Attachment 311788 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/ftl/FTLOutput.h:380: The parameter name "pointer" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Filip Pizlo
Comment 4 2017-06-02 09:40:17 PDT
Created attachment 311830 [details] the patch
Radar WebKit Bug Importer
Comment 5 2017-06-02 09:40:34 PDT
Filip Pizlo
Comment 6 2017-06-02 09:41:37 PDT
Created attachment 311831 [details] the patch
Build Bot
Comment 7 2017-06-02 09:43:05 PDT
Attachment 311831 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/ftl/FTLOutput.h:380: The parameter name "pointer" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 1 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
Filip Pizlo
Comment 8 2017-06-02 10:02:02 PDT
Looks like the debug EWS sadness is unrelated to this patch.
Keith Miller
Comment 9 2017-06-02 10:51:03 PDT
Comment on attachment 311831 [details] the patch View in context: https://bugs.webkit.org/attachment.cgi?id=311831&action=review r=me. > Source/JavaScriptCore/ftl/FTLOutput.h:380 > + LValue atomicWeakCAS(LValue expected, LValue newValue, TypedPointer pointer, B3::Width); Do you use this?
Filip Pizlo
Comment 10 2017-06-02 10:59:45 PDT
(In reply to Keith Miller from comment #9) > Comment on attachment 311831 [details] > the patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=311831&action=review > > r=me. > > > Source/JavaScriptCore/ftl/FTLOutput.h:380 > > + LValue atomicWeakCAS(LValue expected, LValue newValue, TypedPointer pointer, B3::Width); > > Do you use this? Nope! Removed!
Filip Pizlo
Comment 11 2017-06-02 10:59:52 PDT
Note You need to log in before you can comment on or make changes to this bug.